--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <input type="text" id="titleInput" placeholder="Enter title" />
 <button class="add" onclick="createPost()">Add Book</button>
 
+<br><br>
+
+  <input type="text" id="searchInput" placeholder="Search book" />
+  <button onclick="searchBooks()" class="search">Search</button>
+
 <table>
   <thead>
     <tr>
